Set layout for card in html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 <body>
 
-    
+<div class="container">
+<img src="mountain.jpg" class="photo" alt="Mountains">
+<div class="content">
+    <p class="title">
+        An Above Average Experience
+    </p>
+    <p class="description">
+        Travel to the premiere mountain tops of New Zealand with our guided tours. 
+        Take in the majestic scenary and witness beauty.
+    </p>
+
+    <img src="link.svg" class="link" alt="Link">
+</div>
+</div>
+
     
 </body>
 </html>
